--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Exercise Fourteen: Project Design Starter\n",
-    "Bringing in elements to enable the possibility for complexity in areas of focus of a project of choice. There was code of interest from the beginning, and future that has allowed the creativity with based structure to exist. So, in relation to a expository through \"organizing and annotating\" the possibility of a workable project design using the a set of primary components of:\n",
+    "Bringing in elements enables the possibility for complexity in areas of focus of a project of choice. There was a code of interest from the beginning and future that has allowed creativity with a based structure to exist. So, with an expository through \"organizing and annotating,\" the possibility of a workable project design using a set of primary components of:\n",
     "\n",
     "- Dependencies: What modules will your project need?\n",
     "- Collection: Where is your data coming from?\n",
@@ -13,7 +13,7 @@
     "- Analysis: What techniques will you use to understand your data?\n",
     "- Visualization: How will you visualize and explore your data?\n",
     "\n",
-    "And with the openness of not being strict guidlines to complete and implement coding for the project fully, it allowed for the thought and imagination toward beginning in theory toward use in my case as a vast use of coding toward dissertational exploration and study.  Also, thank you for the goal of not being fully \"complete, functional workflow,\" as fully bringiing in all influences challenges the process.  Where exploring elements to create a valued starting point toward future work references, is great! (Note where you have something working, and where it's broken or in progress).\n",
+    "Also, thank you for the goal of not being fully \"complete, functional workflow,\" as fully bringing in all influences challenges the process.  Exploring elements to create a valued starting point toward future work references is rewarding! And with the openness of not being strict guidelines to complete and implement coding for the project entirely allowed for the thought and imagination toward the beginning in theory to the use of coding with a dissertational exploration of study.\n",
     "\n",
     "\n"
    ]
@@ -43,8 +43,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial areas that brought interest, \n",
-    "were from the module exploration and journey through the beginning of code to the more potent resolve of visualized expression toward the end of the semester.\n"
+    "### Initial areas that brought interest\n",
+    "Modules were developed with module exploration, journeying through the beginning of code to the more potent resolve of visualized expression by the end of the semester.\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "source": [
     "### Basics Assignment #1\n",
     "\n",
-    "Informative with the fundamental compilations presented value experimenting from Coding Exercise One, famed \"Hello World\" \n",
+    "Informative with the fundamental compilations presented value experimenting from Coding Exercise One, famed \"Hello World.\" \n",
     "\n",
     "```\n",
     "f = open('helloworld.txt','w')\n",
@@ -83,7 +83,7 @@
    "source": [
     "### Basics Assignment #2\n",
     "\n",
-    "Then toward the importing the libraries you need for reading in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for your work: this can be anything, but will work best if it's a static site (not a social media hashtag, etc.)\n",
+    "Then toward importing the libraries, you need to read in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for representation aspects of work if it's a static sit\n",
     "\n",
     "```\n",
     "import urllib.request, urllib.error, urllib.parse\n",
@@ -108,9 +108,7 @@
     "### Basics Assignment #3\n",
     "\n",
     "\n",
-    "Next, splice the content you've imported to include only the primary text of interest. \n",
-    "You'll need to investigate the website you are looking at and choose strategically what tags you look for to define the starting and ending location of your splice. \n",
-    "Build on the model in CleaningHTML.ipynb\n",
+    "Next, splicing the content imported included only the primary text of interest. The need to strategically investigate the website of interest was chosen toward tags used to represent a start and end of the spliced location (Using a .ipynb representation).\n",
     "\n",
     "```\n",
     "\n",
@@ -134,9 +132,7 @@
     "\n",
     "### Basics Assignment #4\n",
     "\n",
-    "Then we'll use stop words to remove all the words that we don't want to include in our count. There are suggested words in this week's readings, \n",
-    "but you can also generate a custom list based on your topic. Define the stop words in an array, \n",
-    "and use a loop to remove any word in your bag of words that also appears on the stop words list (use the examples in Dictionaries for guidance.)\n",
+    "Stop words are used to remove all less relevant words from a count in order to create a custom list based on a topic of interest. From there, it created an avenue towards filtering words of choice from the established bag of words through a loop\n",
     "\n",
     "```\n",
     "stop_words = ['a','of','my','up','rom','com','how','was','remotelyhow','set','was','by','k','ritmanplus','iconalex','ritmanu','k','correspondentmore', 'got','tip','u','for','and']\n",
@@ -157,9 +153,7 @@
    "source": [
     "### Basics Assignment #5\n",
     "\n",
-    "\n",
-    "\n",
-    "Bonus: Export a Meaningful Visualization, since I had success with the pie chart aspects above, I decided to bring familiarity toward the Bonus area toward meaningful visualization. As s result, incorporating other sites to illustrate allowed for a way to secure the figure (get_figure) from my past familiarity with the pie aspects from challenge #4. Then by bringing in the coded command (savefig) to help create a workable range of filetypes, including an increased parameter to allow the freedom of text to be expanded with minor limitations within the visual.\n",
+    "Bonus: Export a Meaningful Visualization. Since I had success with the pie chart aspects above, I decided to bring familiarity toward the Bonus area toward meaningful visualization. As s result, incorporating other sites to illustrate allowed for a way to secure the figure (get_figure) from my past familiarity with the pie aspects from challenge #4. Then by bringing in the coded command (savefig) to help create a workable range of filetypes, including an increased parameter to allow the freedom of text to be expanded with minor limitations within the visual.\n",
     "\n",
     "```\n",
     "fig = df['title'][0:10].value_counts().plot(kind='pie', title='Top 10 Films').get_figure()\n",
@@ -202,7 +196,7 @@
     "### Basics Assignment #8\n",
     "\n",
     "Stage One: Import Structured CSV Data (bonus: from multiple files)\n",
-    "Blockbusters.csv was imported and placed into a file to help avoid any error toward access through the use of separation. And with the use of Pandas, the tone was set to decipher and explore initial areas and trends within Blockbusters.csv set as the data frame in question housed in the folder formed \"busters.\" As metadata in the form of text formated documents has the potential to create value when they are kept \"in a tabular format\" (Karsdorp, Kestemont, and Riddell 126).\n",
+    "Blockbusters.csv was imported and placed into a file to help avoid any error toward access through separation. And with the use of Pandas, the tone was set to decipher and explore initial areas, and trends within Blockbusters.csv set as the data frame in question housed in the folder formed \"busters.\" As metadata in text, formatted documents can create value when kept \"in a tabular format\" (Karsdorp, Kestemont, and Riddell 126).\n",
     "\n",
     "```\n",
     "import pandas as pd\n",
@@ -253,9 +247,9 @@
    "source": [
     "### Basics Assignment #10\n",
     "Stage Five: Use at least one data visualization from a previous exercise, demo, or the course text to analyze a different element of your tweets.\n",
-    "Today, most \"geographical maps using the package Cartopy, ...is Python's (emerging) standard for geospatial data processing and analysis\" (Karsdorp, Kestemont, and Riddell 230). And with the use of a \"Python library Cartopy... \" demonstrated how ...maps can help communicate a historical narrative (Karsdorp, Kestemont, and Riddell 244). Now we are able to plot a solution and move toward the bonus challenge of charting user interaction. And it was a bit realizing and humorous that along with the map, one location was visualized appropriately residing in Washington DC. The capital of the US.\n",
+    "Today, most \"geographical maps using the package Cartopy, ...is Python's (emerging) standard for geospatial data processing and analysis\" (Karsdorp, Kestemont, and Riddell 230). And with the use of a \"Python library Cartopy... \" demonstrated how ...maps can help communicate a historical narrative (Karsdorp, Kestemont, and Riddell 244). We can plot a solution and move toward the bonus challenge of charting user interaction. And it was a bit realizing and humorous that along with the map, one location was visualized appropriately residing in Washington DC. The capital of the US.\n",
     "\n",
-    "Note: there is an option to pull data used toward Geographic concentrations related to locations -but not necessarily where the tweets are coming from.\n",
+    "Note: There is an option to pull data for Geographic concentrations based on locations, but not necessarily where the tweets are ruminating.\n",
     "```\n",
     "import cartopy.crs as ccrs\n",
     "from matplotlib.patches import Circle\n",
@@ -282,7 +276,7 @@
     "### Basics Assignment #11\n",
     "\n",
     "Stage Three: Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
-    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow for the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. large document use or handling].\n",
+    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. extensive document use or handling].\n",
     "\n",
     "```\n",
     "def load_directory(directory):\n",
@@ -391,8 +385,9 @@
    "source": [
     "### Basics Assignment #14\n",
     "\n",
-    "Collection\n",
-    "Describe your data collection scope and process briefly, and include an example of how you might collect your data drawing on our other projects. For example, if this workflow will collect Twitter data from a stream, you might revisit that demo, copy the stream, and adjust the hashtag.\n",
+    "I was able to think of the coding benefits of exploring and organizing interest as I viewed this collection example.\n",
+    "\n",
+    "\"Describe your data collection scope and process briefly, and include an example of how you might collect your data drawing on our other projects. For example, if this workflow will collect Twitter data from a stream, you might revisit that demo, copy the stream, and adjust the hashtag\" (Salter).\n",
     "\n",
     "```\n",
     "# We'll need to extract our text from our novels, and we'll use regular expressions to start cleaning it of the Gutenberg header and footer \n",
@@ -504,7 +499,7 @@
    "source": [
     "## Project Overview: IMDb (Exploration interest and discovery from The Hollywood Reporter coded interest to the overall IMDb (started) research.\n",
     "\n",
-    "I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
+    "I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case, using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
     "\n"
    ]
   },
@@ -513,7 +508,7 @@
    "metadata": {},
    "source": [
     "## Stage One: Dependencies\n",
-    "Now, in relation to the attempt to explore, To keep the direction within my API perspectives explored this semester, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. This was a new but warranted area to examine due to practicing something off the grid with a Python app toward finding a minor query. With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172).\n",
+    "Now, about the attempt to explore, To keep the direction within my API perspectives studied this semester, I brought in Wikipedia subjects of a diverse director focus in the film and entertainment industry. This was a new but warranted area to examine due to practicing something off the grid with a Python app toward finding a minor query. With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172).\n",
     "\n",
     "```\n",
     "import wikipedia\n",
@@ -564,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the film industry's random gathering of directors listed on Wikipedia correctly to locate, the interesting component was that Sean Baker included the (filmmaker) tag but still came through on the choices. The only option that could not come on board and be documented in Wikipedia correctly was \"Sidney Poitier,\" which signified a \"GLITCH... a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity\" (Benjamin 77). As a result, he had to be replaced with another choice to move forward. Some of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward bringing in the list becoming a defined .txt entity within the process and file. As a result, it enabled saving page content within the director's folder to become a viable entity to explore. Which enlisted \"The notion of \"cognitive load\" (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
+    "Using the film industry's random gathering of directors listed on Wikipedia correctly to locate, the exciting component was that Sean Baker included the (filmmaker) tag but still came through on the choices. The only option that could not come on board and be documented in Wikipedia correctly was \"Sidney Poitier,\" which signified a \"GLITCH... a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity\" (Benjamin 77). As a result, he had to be replaced with another choice to move forward. Some of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward bringing in the list becoming a defined .txt entity within the process and file. As a result, it enabled saving page content within the director's folder to become a viable entity to explore. Which enlisted \"The notion of \"cognitive load\" (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
     "\n",
     "directors = [\"Adam Curtis\",\"Mia Hansen-Love\",\"So Yong Kim\",\"Sean Baker\",\"Steven Spielberg\",\"Angelina Jolie\",\"George Lucas\",\"Jodie Foster\",\"Martin Scorsese\",\"Sofia Coppola\",\"Daniel Myrick\",\"M. Night Shyamalan\"]\n",
     "for director in directors:\n",
@@ -1058,7 +1053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, moving on to help sybolize the process, toward a more exploratory interest toward future (images bonus). I wanted to explore IMDb's known avenue of Chart Toppers of film information.  Here it was expanded from \"bs4 import BeautifulSoup\" with the benefits of \"requests\" and \"re.\" Which helped the progress embark upon an URL focus \"http://www.imdb.com/chart/top.\" And allowed for a strategy to draw upon areas of interest and altered \"Movies, Links, Crew, Ratings, Votes, etc.\""
+    "Then, toward a more exploratory interest of the future (image bonus). The Chart Toppers section of IMDb sounded interesting to me.  With the addition of \"requests\" and \"re.\" The progress embarked upon an URL focus \"http://www.imdb.com/chart/top.\" And evolved to encompass \"Movies, Links, Crew, Ratings, Votes, etc.\""
    ]
   },
   {
@@ -1085,7 +1080,7 @@
    "metadata": {},
    "source": [
     "Collection: Where is your data coming from?\n",
-    "In this case, there was an opening toward understanding of how to download IMDb's option to toward a top realm of movie data."
+    "It opens the door to understanding IMDb's option for downloading movie data."
    ]
   },
   {
