--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -1119,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, (create a empty list for storing movie information) [list] Then, (Iterating over movies to extract each movie's details) [index], by (Separating movie into: 'place', 'title', 'year')"
+    "Next, follow the process to form an empty list for storage. Based on the components of 'place,' 'title,' and 'year,' film information was extracted."
    ]
   },
   {
@@ -1435,7 +1435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Downloading imdb top 250 movie's data) [URL], (create a empty list for storing movie information) [list], (Iterating over movies to extract each movie's details) [for index], Separating  movie into: 'place', 'title', 'year')[index range], (printing movie details with its rating)[for movie]"
+    "As a result, it continued toward an organizational list of information."
    ]
   },
   {
@@ -1744,13 +1744,6 @@
     "for movie in list:\n",
     "    print(movie['place'], '-', movie['movie_title'], '('+movie['year'] +\n",
     "          ') -', 'Starring:', movie['star_cast'], movie['rating'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "dtm=vectorizer.fit_transform(filenames).toarray() # defines document term matrix"
    ]
   },
   {
