--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial areas that brought interest\n",
+    "### Initial semester areas that brought interest\n",
     "Modules were developed with module exploration, journeying through the beginning of code to the more potent resolve of visualized expression by the end of the semester.\n"
    ]
   },
@@ -436,61 +436,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise Eleven: PCA\n",
-    "I initially drew on the class example and the discussion of PCA in the Data-Sitters Club, which enabled the code to flow from the beginning.\n",
+    "### The Hollywood Reporter: Influence (Inspirational notes)\n",
     "\n",
-    "I went eleven toward collecting the texts from the use of .pdf files, mainly due to my usual use of research archives and libraries toward dissertational and assignment references. In this case, I explored lager .pdf's in the form of the Hollywood Reporter, mainly for its texted pages of industry, but also to see if it was doable with the gigabytes that were needed to explore even amidst imagery and photos, which allowed for favoritism with the OS module to become relevant to process the text as \"Codes are both reflective and predictive. They have a past and a future\" (Benjamin 6).\n",
+    "Now, influenced by Exercise Eleven: PCA. I explored larger .pdf's in the Hollywood Reporter, mainly for its texted industry pages, amidst doable gigabytes of imagery and photos. The OS module brought relevancy to the process: \"Codes are both reflective and predictive. They have a past and a future\" (Benjamin 6).\n",
     "\n",
-    "Once this was established, the following directives were explored through the process:\n",
-    "\n",
-    "Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
-    "Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
-    "Run a simple (2 word) visualization comparing all texts\n",
-    "Run a full (PCA) visualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis.\n",
-    "Bonus Challenge: Depending on your interests, you might either try using an API to collect the texts rather than saving them to a directory, or you might use Bokeh to attempt an exportable visualization of some aspect of what you've collected."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Stage One: Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
-    "I chose the use of the famed Hollywood Reporter out of respect for the gossip and news of the film industry as well as a defined use of the material as \"Modeling depends on source data\" (Drucker 171). And the great thing about the reference is that it comes in two forms when subscribing (educational discount), traditional widespread magazine and the .pdf versions. So, even though it was not my idea to get the magazine subscription as I am not a massive fan of the text, I could now challenge myself with this assignment -ya!. This enabled the use of Stylometry, which emphasizes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250). Now, we begin by not using the whole file but extracting the text (.pdf) available using pdfminer.six's assistance. And here, the use of gathering and filing the resources and files into a directory makes it easier to scan through the folder and pdf versions in use."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The use of visualization has a component to enhance the journey since \"Problem solving is at the heart of tech\" (Benjamin 11). Text profiles came to life with these choices and began to signify that the process was on course, which opened the toward to the two factor and enlightened PCA. Here, the intersections became visual and allowed viewership to see the obvious to extreme significations, which brought in The Hollywood Reporter's components toward series and content found and focused on within the version recognized."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow for the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. large document use or handling]."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The big moment here was to evoke a streamlining and altering the introduced fuller version of the formulaic process of .txt focus from last week. Below there are alterations adjusted for the .pdf files, which warrants changes from this process introduced previously. And since there was a .pdf focus formulating viable output naming to adds '-nouns' version to be saved the chosen filename, the possibilities to open output files expanded as the .pdf,' is replaced by the '-nouns.txt.' Here the .txt becomes the output with more relatabilities and range to the formulations. Now, contemplating the errors=\"ignore\" vs. errors=\"replace,\" replace wins toward cleaning up the process more authentic with more solutions and options, keeping the journey streamlines and cleaner."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the element of use of PCA direction, \"import sklearn.decomposition\" allows for the comfort to \"reduce the dimensionality of\" the source that is explored (Karsdorp, Kestemont, and Riddell 268), which takes advantage of the release of a condensed or simplified data set. Now formulated a \"two-dimensional summary,\" reducing the focus accordingly toward a \"low-dimensional\" data set (Karsdorp, Kestemont, and Riddell 268), which helps bring in a more defined view below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, with the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268), we can use the following code to create a data set of visualization to view beyond the authorial form and clustering. Now, connections become more visual in this visualization, and elements are enhanced toward areas of research focus. Here some areas are overlapped and begin to define even with the cluster some areas of impact and recognition. The great discovery of the processes from the change of .txt focus in our previous week's samples to the chosen and changed .pdf is that there are more possibilities. And most research that I come across is more viewed in the .pdf form, and the use of The Hollywood Reporter, even though more for just practice and play, there was an impact in finding that even within their larger form it was usable toward exploration, which may come in handy along the way down the road."
+    "I chose the use of the famed Hollywood Reporter out of respect for the gossip and news of the film industry as well as a defined use of the material as \"Modeling depends on source data\" (Drucker 171). And the great thing about the reference is that it comes in two forms when subscribing (educational discount), traditional widespread magazine and the .pdf versions. So, even though it was not my idea to get the magazine subscription as I am not a massive fan of the text, I could now challenge myself with this assignment -ya!. This enabled the use of Stylometry, which emphasizes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250). Now, we begin by not using the whole file but extracting the text (.pdf) available using pdfminer.six's assistance. And here, the use of gathering and filing the resources and files into a directory makes it easier to scan through the folder and pdf versions in use.\n",
+    "\n",
+    "Where in Stage One importing at least ten documents from files. I chose the use of the famed Hollywood Reporter out of respect for the gossip as news of the film industry \"Modeling depends on source data\" (Drucker 171). This enabled the use of Stylometry, which emphasizes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250). Where extracting the text (.pdf) available using pdfminer.Sixteen's assistance helped gather and file the resources and files into a directory, making it easier to scan through the folder and pdf versions in use.\n",
+    "\n",
+    "The use of visualization has a component to enhance the journey since \"Problem solving is at the heart of tech\" (Benjamin 11). Here, the intersections became visual and allowed viewership to see the obvious to extreme significations, which brought The Hollywood Reporter's components toward series and content found and focused on within the version recognized. Text profiles came to life with these choices and began to signify that the process was on course, which opened the toward to the two factor and enlightened PCA.\n",
+    "\n",
+    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. extensive document use or handling].\n",
+    "\n",
+    "With the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268), we can use the following code to create a data set of visualization to view beyond the authorial form and clustering. Now, connections become more visual in this visualization, and elements are enhanced toward research focus areas. And most research that I come across is more viewed in the .pdf form, and the use of The Hollywood Reporter, even though more for just practice and play, there was an impact in finding that even within their larger form it was usable toward exploration, which may come in handy along the way down the road.\n",
+    "\n",
+    "In the end, it influenced the thought outside the box with the use of IMDb for entertainment resources within research.\n",
+    "\n"
    ]
   },
   {
@@ -499,7 +461,7 @@
    "source": [
     "## Project Overview: IMDb (Exploration interest and discovery from The Hollywood Reporter coded interest to the overall IMDb (started) research.\n",
     "\n",
-    "I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case, using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
+    "NOw, I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case, using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
     "\n"
    ]
   },
@@ -1750,25 +1712,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193).\n",
     "\n",
-    "Stop words associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization,\"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently.\n",
+    "### Visualization Goals\n",
     "\n",
-    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, signifying that “Knowledge of the existing tools and platforms for this aspect of research is important” (Drucker 199).\n",
-    "\n",
-    "I experimented with the range and size of indicators, etc., as “A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues” (Drucker 199).\n",
-    "\n",
-    "Even though it is light in modes, HTML visual presentation, does show the separation of scores of sentiment, etc., separated by light and dark components, as \"a repository like GitHub ...is an invaluable resource for anyone working on digital project development” (Drucker 208).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importing sklearn (scikit) learn's CountVectorizer, helps to enhance and organize a document-term matrix. This enables filtering with the removal of \"words, in this pedagogical setting to reduce the considerable time required to fit the topic model\" (Karsdorp, Kestemont, Riddell 297).\n",
-    "\n",
-    "n association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition model = decomposition.LatentDirichletAllocation( n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300). Here 100 topics to create patterns"
+    "Intiated with importing sklearn (scikit) learn's CountVectorizer, that helps to enhance and organize a document-term matrix. This enables filtering with the removal of \"words, in this pedagogical setting to reduce the considerable time required to fit the topic model\" (Karsdorp, Kestemont, Riddell 297). In association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition model = decomposition.LatentDirichletAllocation( n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300). Here 100 topics to create patterns\n"
    ]
   },
   {
