--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -22,28 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References:\n",
-    "\n",
-    "Benjamin, Ruha. Race after Technology: Abolitionist Tools for the New Jim Code. Polity, 2019.\n",
-    "\n",
-    "Dombrowski, Quinn, et al. “Introduction to Jupyter Notebooks.” Programming Historian, 8 Dec. 2019, https://programminghistorian.org/en/lessons/jupyter-notebooks.\n",
-    "\n",
-    "Drucker, Johanna. The Digital Humanities Coursebook an Introduction to Digital Methods for Research and Scholarship. London New York Routledge, Taylor & Francis Group, 2021.\n",
-    "\n",
-    "Folgert Karsdorp, et al. Humanities Data Analysis Case Studies with Python. Princeton Oxford Princeton University Press, 2021.\n",
-    "\n",
-    "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
-    "\n",
-    "Turkel, William J., and Adam Crymble. “Code Reuse and Modularity in Python.” Programming Historian, 17 July 2012, https://programminghistorian.org/en/lessons/code-reuse-and-modularity.\n",
-    "\n",
-    "Weingart, Scott. “Doing Bayesian Data Analysis.” The Scottbot Irregular, http://www.scottbot.net/HIAL/index.html@p=8237.html.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initial semester areas that brought interest\n",
+    "### Initial Semester Areas and Moments that Brought Interest\n",
     "Modules were developed with module exploration, journeying through the beginning of code to the more potent resolve of visualized expression by the end of the semester.\n"
    ]
   },
@@ -459,9 +438,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Overview: IMDb (Exploration interest and discovery from The Hollywood Reporter coded interest to the overall IMDb (started) research.\n",
+    "## Project Overview: \n",
+    "### IMDb's exploration from The Hollywood Reporter coded interest to the overall IMDb start of research.\n",
     "\n",
-    "NOw, I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case, using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
+    "Now, I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case, using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
     "\n"
    ]
   },
@@ -522,7 +502,7 @@
    "metadata": {},
    "source": [
     "Using the film industry's random gathering of directors listed on Wikipedia correctly to locate, the exciting component was that Sean Baker included the (filmmaker) tag but still came through on the choices. The only option that could not come on board and be documented in Wikipedia correctly was \"Sidney Poitier,\" which signified a \"GLITCH... a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity\" (Benjamin 77). As a result, he had to be replaced with another choice to move forward. Some of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward bringing in the list becoming a defined .txt entity within the process and file. As a result, it enabled saving page content within the director's folder to become a viable entity to explore. Which enlisted \"The notion of \"cognitive load\" (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
-    "\n",
+    "```\n",
     "directors = [\"Adam Curtis\",\"Mia Hansen-Love\",\"So Yong Kim\",\"Sean Baker\",\"Steven Spielberg\",\"Angelina Jolie\",\"George Lucas\",\"Jodie Foster\",\"Martin Scorsese\",\"Sofia Coppola\",\"Daniel Myrick\",\"M. Night Shyamalan\"]\n",
     "for director in directors:\n",
     "    page = wikipedia.page(director)\n",
@@ -531,6 +511,7 @@
     "    with open (filename, \"w\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
     "        f.write(page.content)\n",
     "        f.close()\n",
+    "```\n",
     "\n"
    ]
   },
@@ -1733,12 +1714,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Enforcing 17 articles/documents oddly coming together with the term matrix found in film as “One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84)."
+    "Stop words associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization, \"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently. Enforcing 17 articles/documents oddly coming together with the term matrix found in film as “One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84)."
    ]
   },
   {
@@ -1763,10 +1742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (# topics, # vocabulary)\n",
-    "assert model.components_.shape == (100, len(vocabulary))\n",
-    "# (# documents, # topics)\n",
-    "assert document_topic_distributions.shape == (dtm.shape[0], 100) "
+    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, signifying that \"Knowledge of the existing tools and platforms for this aspect of research is important\" (Drucker 199). I experimented with the range and size of indicators, etc., as \"A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues\" (Drucker 199).\n"
    ]
   },
   {
@@ -1914,14 +1890,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualization: How will you visualize and explore your data? (BONUS)"
+    "## Visualization: How will you visualize and explore your data? (BONUS)\n",
+    "\n",
+    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193). \"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291). Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components, as \"a repository like GitHub ...is an invaluable resource for anyone working on digital project development\" (Drucker 208)."
    ]
   },
   {
@@ -1992,16 +1963,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The use of \"plotting, for each year,... can, in effect, calculate the total number of words in all opinions published in a given year associated with a topic by multiplying opinion lengths by the estimated topic shares\" (Karsdorp, Kestemont, Riddell 315).\n",
-    "\n",
-    "Stage Three: Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
-    "The level of fandom in Wikipedia and what goes on the page enabled the analyzer to stand neutral on contributors who chose people they decide to write about as \"An interface constructs a narrative\" (Drucker 183).\n",
-    "\n",
-    "Notes: The compounded polarity of each article simulates differences or similarities of negative or positive sentence components. Filenames were explored locally, with folders created. In the end, encoding is not concerned about errors and send them to documents, printing them after filenames while checking out differences between large or small.\n",
-    "\n",
-    "\n",
-    "Achieved a significant moment of generating book novel set up and what words that follow. As many interfaces welcome the use of a \"universal\" reader with an \"omniscient\" viewer, \"but no such person exists, and each individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190).\n",
+    "Achieved a significant moment of generating movie \"plotting, for each year,... multiplying opinion lengths by the estimated topic shares\" (Karsdorp, Kestemont, Riddell 315). And in comparison with the initialized level of fandom in Wikipedia shows similarities of IMDb's. What goes on the page enabled the analyzer to stand neutral as \"An interface constructs a narrative\" (Drucker 183). As many interfaces welcome the use of a \"universal\" reader with an \"omniscient\" viewer, \"each individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190), which resonates to my own dissertational journey!\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References:\n",
+    "\n",
+    "Benjamin, Ruha. Race after Technology: Abolitionist Tools for the New Jim Code. Polity, 2019.\n",
+    "\n",
+    "Dombrowski, Quinn, et al. “Introduction to Jupyter Notebooks.” Programming Historian, 8 Dec. 2019, https://programminghistorian.org/en/lessons/jupyter-notebooks.\n",
+    "\n",
+    "Drucker, Johanna. The Digital Humanities Coursebook an Introduction to Digital Methods for Research and Scholarship. London New York Routledge, Taylor & Francis Group, 2021.\n",
+    "\n",
+    "Folgert Karsdorp, et al. Humanities Data Analysis Case Studies with Python. Princeton Oxford Princeton University Press, 2021.\n",
+    "\n",
+    "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
+    "\n",
+    "Turkel, William J., and Adam Crymble. “Code Reuse and Modularity in Python.” Programming Historian, 17 July 2012, https://programminghistorian.org/en/lessons/code-reuse-and-modularity.\n",
+    "\n",
+    "Weingart, Scott. “Doing Bayesian Data Analysis.” The Scottbot Irregular, http://www.scottbot.net/HIAL/index.html@p=8237.html.\n"
    ]
   }
  ],
